# calamares

./: .clang-format  .editorconfig  .gersemirc  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .travis.yml  AUTHORS  CHANGELOG.md  CHANGES  CHANGES-3.2  CHANGES-3.3  CMakeLists.txt  CONTRIBUTING.md  CalamaresAddBrandingSubdirectory.cmake  CalamaresAddLibrary.cmake  CalamaresAddModuleSubdirectory.cmake  CalamaresAddPlugin.cmake  CalamaresBuildTreeSettings.cmake.in  CalamaresConfig.cmake.in  CalamaresConfigVersion.cmake.in  CalamaresUse.cmake.in  Dockerfile  HACKING.md  PKGBUILD  README.md  build.sh  calamares.desktop  calamares.desktop.in  cmake_uninstall.cmake.in  com.github.calamares.calamares.policy  inheritance.cpp  io.calamares.calamares.appdata.xml  settings.conf  snapcraft.yaml  test.sh
lang/: 2calamares_el.ts  CMakeLists.txt  calamares_ar.ts  calamares_as.ts  calamares_ast.ts  calamares_az.ts  calamares_az_AZ.ts  calamares_be.ts  calamares_bg.ts  calamares_bn.ts  calamares_bqi.ts  calamares_ca.ts  calamares_ca@valencia.ts  calamares_cs_CZ.ts  calamares_da.ts  calamares_de.ts  calamares_el.ts  calamares_en.ts  calamares_en_CA.ts  calamares_en_DE.ts  calamares_en_GB.ts  calamares_en_HK.ts  calamares_en_IN.ts  calamares_eo.ts  calamares_es.ts  calamares_es_AR.ts  calamares_es_ES.ts  calamares_es_MX.ts  calamares_es_PE.ts  calamares_es_PR.ts  calamares_et.ts  calamares_eu.ts  calamares_eu_ES.ts  calamares_fa.ts  calamares_fa_IR.ts  calamares_fi.ts  calamares_fi_FI.ts  calamares_fr.ts  calamares_fr_CA.ts  calamares_fr_CH.ts  (+97 more)
src/: CMakeLists.txt
src/branding/: CMakeLists.txt  README.md
src/branding/alter/: branding.desc  show.qml  stylesheet.qss
src/branding/default/: branding.desc  show.qml  stylesheet.qss
src/branding/fancy/: show.qml
src/branding/manjaro/: branding.desc  show.qml
src/branding/manjaro-kde/: branding.desc
src/branding/manjaro-xfce/: branding.desc  show.qml
src/calamares/: CMakeLists.txt  CalamaresApplication.cpp  CalamaresApplication.h  CalamaresInstallDirs.h.in  CalamaresVersion.h.in  CalamaresWindow.cpp  CalamaresWindow.h  CalamaresWindow.ui  Config.h.in  DebugWindow.cpp  DebugWindow.h  DebugWindow.ui  Module.cpp  Module.h  ModuleLoader.cpp  ModuleLoader.h  ModuleManager.cpp  ModuleManager.h  Settings.cpp  Settings.h  VariantModel.cpp  VariantModel.h  ViewManager.cpp  ViewManager.h  YamlUtils.cpp  calamares-navigation.qml  calamares-sidebar.qml  calamares.qrc  main.cpp  test_conf.cpp  testmain.cpp
src/calamares/modulesystem/: Module.cpp  ModuleManager.cpp  ModuleManager.h  ViewModule.cpp  ViewModule.h
src/calamares/progresstree/: CategoryItem.cpp  CategoryItem.h  ProgressTreeDelegate.cpp  ProgressTreeDelegate.h  ProgressTreeItem.cpp  ProgressTreeItem.h  ProgressTreeModel.cpp  ProgressTreeModel.h  ProgressTreeView.cpp  ProgressTreeView.h  TextTreeItem.cpp  TextTreeItem.h  ViewStepItem.cpp  ViewStepItem.h
src/calamares/viewpages/: AbstractPage.cpp  AbstractPage.h  PagePlugin.cpp  PagePlugin.h  ViewPlugin.cpp  ViewPlugin.h  ViewStep.h
src/crashreporter/: CMakeLists.txt  CrashReporterConfig.h.in  main.cpp  resources.qrc
src/libcalamares/: CMakeLists.txt  CalamaresAbout.cpp  CalamaresAbout.h  CalamaresConfig.h.in  CalamaresVersion.h.in  CalamaresVersionX.h.in  Config.h.in  CppJob.cpp  CppJob.h  DllMacro.h  GlobalStorage.cpp  GlobalStorage.h  Job.cpp  Job.h  JobExample.cpp  JobExample.h  JobQueue.cpp  JobQueue.h  PluginDllMacro.h  ProcessJob.cpp  ProcessJob.h  PythonHelper.cpp  PythonHelper.h  PythonJob.cpp  PythonJob.h  PythonJobApi.cpp  PythonJobApi.h  PythonJobHelper.cpp  PythonJobHelper.h  Settings.cpp  Settings.h  Tests.cpp  Tests.h  Typedefs.h
src/libcalamares/compat/: Mutex.h  Size.h  Variant.h
src/libcalamares/geoip/: GeoIP.cpp  GeoIP.h  GeoIPFixed.cpp  GeoIPFixed.h  GeoIPHandler.cpp  GeoIPHandler.h  GeoIPJSON.cpp  GeoIPJSON.h  GeoIPTests.cpp  GeoIPTests.h  GeoIPXML.cpp  GeoIPXML.h  Handler.cpp  Handler.h  Interface.cpp  Interface.h  test_geoip.cpp
src/libcalamares/kdsingleapplicationguard/: kdlockedsharedmemorypointer.cpp  kdlockedsharedmemorypointer.h  kdsingleapplicationguard.cpp  kdsingleapplicationguard.h  kdtoolsglobal.cpp  kdtoolsglobal.h  pimpl_ptr.cpp  pimpl_ptr.h
src/libcalamares/locale/: CountryData_p.cpp  Global.cpp  Global.h  Label.cpp  Label.h  LabelModel.cpp  LabelModel.h  Lookup.cpp  Lookup.h  Tests.cpp  Tests.h  TimeZone.cpp  TimeZone.h  TranslatableConfiguration.cpp  TranslatableConfiguration.h  TranslatableString.cpp  TranslatableString.h  Translation.cpp  Translation.h  TranslationsModel.cpp  TranslationsModel.h  ZoneData_p.cpp  ZoneData_p.cxxtr  cldr-extractor.py  zone-extractor.py
src/libcalamares/modulesystem/: Actions.h  Config.cpp  Config.h  Descriptor.cpp  Descriptor.h  InstanceKey.cpp  InstanceKey.h  Module.cpp  Module.h  Preset.cpp  Preset.h  Requirement.cpp  Requirement.h  RequirementsChecker.cpp  RequirementsChecker.h  RequirementsModel.cpp  RequirementsModel.h  Tests.cpp
src/libcalamares/network/: Manager.cpp  Manager.h  Tests.cpp  Tests.h
src/libcalamares/partition/: AutoMount.cpp  AutoMount.h  FSName.h  FileSystem.cpp  FileSystem.h  Global.cpp  Global.h  KPMHelper.h  KPMManager.cpp  KPMManager.h  KPMTests.cpp  Mount.cpp  Mount.h  PartitionIterator.cpp  PartitionIterator.h  PartitionQuery.cpp  PartitionQuery.h  PartitionSize.cpp  PartitionSize.h  Sync.cpp  Sync.h  Tests.cpp  Tests.h  calautomount.cpp
src/libcalamares/python/: Api.cpp  Api.h  Logger.h  Pybind11Helpers.h  PythonJob.cpp  PythonJob.h
src/libcalamares/testdata/: localetest_nl.ts  yaml-list.conf
src/libcalamares/translation/: Binding.cpp  Binding.h
src/libcalamaresui/: Branding.cpp  Branding.h  CMakeLists.txt  ExecutionViewStep.cpp  ExecutionViewStep.h  InstallationViewStep.cpp  InstallationViewStep.h  PythonQtConsoleViewStep.cpp  PythonQtConsoleViewStep.h  Settings.cpp  Settings.h  UiDllMacro.h  ViewManager.cpp  ViewManager.h  libcalamaresui.qrc
src/modules/: CMakeLists.txt  README.md  globalStorage.yaml  global_storage.yaml  test_conf.cpp  testmodule.py  testpythonrun.sh
src/qml/: CMakeLists.txt
(+2129 files in other folders)
